# Intent

./: CMakeLists.txt  README.md  intent_language_foundation_spec_v0_2.docx
docs/: diagnostics-schema.md  grammar-lexical.md  grammar-syntax.md  open-questions.md  v1-scope.md
include/intent/: ast.h  diagnostic.h  parser.h  token.h
src/: main.cpp
src/diagnostics/: diagnostic.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
